renamed server.js to index.js and renamed jsx files to j

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -27,7 +27,7 @@
 <body>
     <div id="root" style="width: 100%; "></div>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script type="text/babel" src="../public/dashboardIndex.jsx"></script>
+    <script type="text/babel" src="../public/dashboardIndex.js"></script>
 </body>
 
 </html>
