--- a/views/logIn.html
+++ b/views/logIn.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="root" style="width: 100%; "></div>
-    <script crossorigin type="text/babel" src="../public/logIn.jsx"></script>
+    <script crossorigin type="text/babel" src="../public/logIn.js"></script>
 </body>
 
 </html>
