--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="root" style="width: 100%; "></div>
-    <script crossorigin type="text/babel" src="../public/index.jsx"></script>
+    <script crossorigin type="text/babel" src="../public/home.js"></script>
 </body>
 
 </html>
